# Parallel-Bandits

./: .gitignore  LICENSE  README.md
etc/jnotebooks/: Multi-Round Epsilon-Arm results.ipynb
etc/jnotebooks/data/: multiround_results.csv
parallel_bandits/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
parallel_bandits/source/: algorithms.cpp  algorithms.hpp  bandits.cpp  bandits.hpp  utils.cpp  utils.hpp
parallel_bandits/tests/: algorithms_test.cpp  utils_test.cpp
src/: CMakeLists.txt  main.cpp
